# lanhu-mcp

./: CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  README.md  README_EN.md  config.example.env  fairygui_converter.py  lanhu_mcp_server.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: fairygui-asset-validator.agent.md  fairygui-reviewer.agent.md  lanhu-design-governor.agent.md  lanhu-to-fairygui.agent.md
.github/instructions/: fairygui-asset-validator.instructions.md  fairygui-memory-write.instructions.md  fairygui-package-scan.instructions.md  fairygui-reuse-in-conversion.instructions.md  lanhu-design-governance.instructions.md
.github/prompts/: convert-design.prompt.md  fairygui-package-reuse.skill.md  govern-design.prompt.md  lanhu-fairygui-workflow.skill.md  refresh-package-memory.prompt.md  validate-package.prompt.md
doc/: agent-flow.md  分享lanhu-to-fairygui.md
scripts/: easy-install.bat  easy-install.sh  fairygui_converter.py  fairygui_package_analyzer.py  quickstart.bat  quickstart.sh  run-stdio.sh  setup-env.bat  setup-env.sh
tests/: test_fairygui_converter.py
